added artists to menu

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body {
     background-color: #000;
     color: #fff;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 ul {
