--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,14 @@ body {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
+h1 {
+    font-size: 2em;
+}
+
+img {
+    max-width: 40vw;
+}
+
 ul {
     list-style: none;
 }
