added reset.css, styles

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,29 +1,4 @@
-/* Reset */
-
-html,
-body,
-div,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-a,
-img,
-li,
-aside,
-footer,
-nav,
-section {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-}
-
+@import url("reset.css");
 body {
     background-color: #000;
     color: #fff;
@@ -41,5 +16,3 @@ img {
 ul {
     list-style: none;
 }
-
-@media width
