--- a/css/styles.css
+++ b/css/styles.css
@@ -5,24 +5,55 @@ body {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
+ul {
+    list-style: none;
+}
+
+.perf {
+    background-color: blue;
+}
+
+.vis {
+    background-color: magenta;
+}
+
+.write {
+    background-color: orange;
+}
+
 h1 {
-    font-size: 2em;
+    font-size: 1.5em;
 }
 
 img {
-    max-width: 40vw;
+    max-width: 60vw;
+}
+
+#container {
+    padding-left: 3em;
+    position: relative;
+}
+
+body {
+    font: 16px Helvetica, sans-serif;
+    padding: 20px 30px;
 }
 
 #mapMenu,
 #artistMenu {
+    position: absolute;
     font-size: 2em;
     list-style: none;
+}
+
+ul li {
+    font-size: 1em;
 }
 
 .dropbtn {
     background-color: #3498DB;
     color: white;
-    padding: 16px;
+    padding: 1em;
     font-size: 16px;
     border: none;
     cursor: pointer;
@@ -38,19 +69,48 @@ img {
     display: inline-block;
 }
 
+#mainMenu li {
+    font-size: .75em;
+}
+
+#artistMenu {
+    max-width: 60em;
+}
+
+.sub-menu {
+    float: right;
+}
+
+.rest {
+    background-color: dodgerblue;
+}
+
+.sched {
+    background-color: rgb(18, 59, 241);
+}
+
+.child {
+    background-color: springgreen;
+}
+
+.refresh {
+    background-color: yellow;
+}
+
 .dropdown-content {
     display: none;
     position: absolute;
+    font-size: 3px;
     background-color: #f1f1f1;
-    min-width: 160px;
+    min-width: 30vw;
     overflow: auto;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    /* box-shadow: 0px 6px 12px 0px rgba(0, 0, 0, 0.2); */
     z-index: 1;
 }
 
 .dropdown-content a {
     color: black;
-    padding: 12px 16px;
+    padding: .25em .25em;
     text-decoration: none;
     display: block;
 }
@@ -61,4 +121,9 @@ img {
 
 .show {
     display: block;
+}
+
+footer {
+    font-size: .65em;
+    margin: 4em;
 }
