--- a/studio-visitor-app/src/index.css
+++ b/studio-visitor-app/src/index.css
@@ -1,14 +1,131 @@
+@import url("reset.css");
 body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    background-color: #000;
+    color: #fff;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+ul {
+    list-style: none;
+}
+
+li {
+    color: #fff;
+}
+
+.perf {
+    background-color: blue;
+}
+
+.vis {
+    background-color: magenta;
+}
+
+.write {
+    background-color: orange;
+}
+
+h1 {
+    font-size: 1.5em;
+}
+
+img {
+    max-width: 60vw;
+    border-radius: 5px;
+}
+
+#container {
+    padding-left: 3em;
+    position: relative;
+    margin: 0 auto;
+}
+
+body {
+    font: 16px Helvetica, sans-serif;
+    padding: 20px 30px;
+}
+
+#mapMenu,
+#artistMenu {
+    position: absolute;
+    font-size: 2em;
+    list-style: none;
+}
+
+ul li {
+    font-size: 1em;
+}
+
+.dropbtn {
+    background-color: #3498DB;
+    color: white;
+    padding: 1em;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+
+.dropbtn:hover,
+.dropbtn:focus {
+    background-color: #2980B9;
+}
+
+#mainMenu li {
+    font-size: .75em;
+}
+
+#artistMenu {
+    max-width: 60em;
+}
+
+.sub-menu {
+    float: right;
+}
+
+.rest {
+    background-color: dodgerblue;
+}
+
+.sched {
+    background-color: rgb(18, 59, 241);
+    color: #fff;
+}
+
+.child {
+    background-color: springgreen;
+}
+
+.refresh {
+    background-color: yellow;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    font-size: 3px;
+    background-color: #f1f1f1;
+    min-width: 30vw;
+    overflow: auto;
+    /* box-shadow: 0px 6px 12px 0px rgba(0, 0, 0, 0.2); */
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: .25em .25em;
+    text-decoration: none;
+    display: block;
+}
+
+.main-content a:hover {
+    background-color: #ddd;
+}
+
+.show {
+    display: block;
+}
+
+footer {
+    font-size: .65em;
+    margin: 4em;
 }
