--- a/studio-visitor-app/src/index.css
+++ b/studio-visitor-app/src/index.css
@@ -26,7 +26,7 @@ li {
 }
 
 h1 {
-    font-size: 1.5em;
+    font-size: .75em;
 }
 
 img {
@@ -48,7 +48,7 @@ body {
 #mapMenu,
 #artistMenu {
     position: absolute;
-    font-size: 2em;
+    font-size: .75em;
     list-style: none;
 }
 
