--- a/studio-visitor-app/src/App.css
+++ b/studio-visitor-app/src/App.css
@@ -45,3 +45,20 @@ header h1 {
   letter-spacing: 2px;
   font-weight: normal;
 }
+
+.container {
+  width: 90%;
+  max-width: 1100px;
+  margin: 1.1em auto;
+  
+  display: grid;
+  grid-gap: 20px;
+  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+}
+.profile {
+  box-sizing: border-box;
+  background: white;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 1px 0 0 rgba(0, 0, 0, 0.1);
+}
