--- a/studio-visitor-app/src/App.css
+++ b/studio-visitor-app/src/App.css
@@ -22,6 +22,17 @@
 .App-link {
   color: #61dafb;
 }
+.container {
+
+  width: 90%;
+  max-width: 1100px;
+  margin: 1.1em auto;
+  
+  /* display: grid; */
+  grid-gap: 20px;
+  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+
+}
 
 @keyframes App-logo-spin {
   from {
@@ -32,33 +43,14 @@
   }
 }
 
-body {
-  text-transform: uppercase;
+img {
+  max-width: 50%;
 }
-
-ul {
+ul li {
   list-style: none;
-}
-header h1 {
-  flex-grow: 1;
-  font-size: 1.5em;
-  letter-spacing: 2px;
-  font-weight: normal;
-}
-
-.container {
-  width: 90%;
-  max-width: 1100px;
-  margin: 1.1em auto;
+  font-style: normal;
   
-  display: grid;
-  grid-gap: 20px;
-  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
 }
-.profile {
-  box-sizing: border-box;
-  background: white;
-  padding: 20px;
-  border-radius: 5px;
-  box-shadow: 0 1px 0 0 rgba(0, 0, 0, 0.1);
+a {
+  text-decoration: none;
 }
