--- a/studio-visitor-app/src/index.css
+++ b/studio-visitor-app/src/index.css
@@ -52,9 +52,17 @@ body {
     list-style: none;
 }
 
-ul li {
+img {
+    max-width: 50%;
+  }
+  ul li {
+    list-style: none;
+    font-style: normal;
     font-size: 1em;
-}
+  }
+  a {
+    text-decoration: none;
+  }
 
 .dropbtn {
     background-color: #3498DB;
