--- a/studio-visitor-app/src/css/index.css
+++ b/studio-visitor-app/src/css/index.css
@@ -10,9 +10,13 @@ body {
     margin: auto;
     padding: 5%;
 }
-
+ul {
+    padding-left: 0;
+    list-style: none;
+  }
 header h1 {
     font-size: 2em;
+    padding: 1vw;
 }
 
 h2 {
@@ -49,13 +53,15 @@ h1 {
 }
 
 img {
-    max-width: 60vw;
+    max-width: 90vw;
     border-radius: 5px;
+    margin: auto;
+    margin-right: 0;
 }
 
 #root {
     padding-left: 3em;
-    position: relative;
+    /* position: relative; */
     margin: 0 auto;
 }
 
