--- a/studio-visitor-app/src/css/styles.css
+++ b/studio-visitor-app/src/css/styles.css
@@ -7,13 +7,28 @@ body {
 }
 
 ul {
-    list-style: none;
+  padding-left: 0;
+  list-style: none;
+}
+
+ul li {
+  font-size: 1em;
+  width: 100%;
 }
 
 li {
-    color: #fff;
+  color: #fff;
+  padding: .45em .5em;
+  margin-bottom: .35em;
+  display: flex;
+  align-items: center;
 }
-
+img {
+  max-width: 90%;
+}
+a[href^="url: 'images/"] {
+  max-width: 90%;
+}
 .perf {
     background-color: blue;
 }
@@ -30,7 +45,7 @@ h1 {
     font-size: 1.5em;
 }
 
-div#map {
+.layout {
     max-width: 95%;
     background-color: #000;
     margin: 0 auto;
@@ -53,10 +68,7 @@ body {
     font-size: 2em;
 }
 
-ul li {
-    font-size: 1em;
-    width: 100%;
-}
+
 
 .dropbtn {
     background-color: #3498DB;
@@ -143,10 +155,7 @@ h1 + p {
   padding-bottom: 1.325em;
   border-bottom: 1px dotted;
 }
-ul {
-  padding-left: 0;
-  list-style: none;
-}
+
 li {
   padding: .45em .5em;
   margin-bottom: .35em;
@@ -218,16 +227,7 @@ li button {
     padding-bottom: 1.325em;
     border-bottom: 1px dotted;
   }
-  ul {
-    padding-left: 0;
-    list-style: none;
-  }
-  li {
-    padding: .45em .5em;
-    margin-bottom: .35em;
-    display: flex;
-    align-items: center;
-  }
+
   input,
   button {
     background: #508abc;
@@ -295,3 +295,9 @@ li button {
     font-size: .75em;
     padding: .5em .65em;
   } */
+
+
+
+  /* ______________________________________________________________________________ 
+  ________________________________Media queries__________________________________
+  ______________________________________________________________________________  */
