--- a/studio-visitor-app/src/css/index.css
+++ b/studio-visitor-app/src/css/index.css
@@ -6,17 +6,38 @@ body {
     font-weight: lighter;
 }
 
-.profile {
-    margin: auto;
-    padding: 5%;
+div.profile {
+    display: inline-block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 90vw;
+    padding-right: 0;
+}
+
+#map {
+  max-width: 100%;  
+}
+div#root {
+    max-width: 95%;
+    padding: 0;
+    margin: 0;
 }
 ul {
-    padding-left: 0;
+    padding: 0;
+    margin: 0;
     list-style: none;
+  }
+ 
+  .profile p, ul li {
+    text-align: center;
   }
 header h1 {
     font-size: 2em;
     padding: 1vw;
+}
+
+h1, h2 {
+    text-align: center;
 }
 
 h2 {
@@ -30,6 +51,7 @@ code {
 
 ul {
     list-style: none;
+    text-align: center;
 }
 
 li {
@@ -53,10 +75,10 @@ h1 {
 }
 
 img {
-    max-width: 90vw;
+    max-width: 80vw;
     border-radius: 5px;
     margin: auto;
-    margin-right: 0;
+    padding: 2vw;
 }
 
 #root {
@@ -75,10 +97,6 @@ body {
     position: absolute;
     font-size: .75em;
     list-style: none;
-}
-
-img {
-    max-width: 50%;
 }
 
 ul li {
